--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "unplugin-auto-import": "^0.9.0",
     "unplugin-icons": "^0.14.5",
     "unplugin-vue-components": "^0.19.6",
+    "url": "^0.11.0",
     "vite-plugin-eslint": "^1.6.1",
     "vue": "^3.2.25",
     "vue-eslint-parser": "^9.0.2",
